--- a/pythonanywhere/templates/account.html
+++ b/pythonanywhere/templates/account.html
@@ -311,6 +311,10 @@
             .banner {
                 width: 90%;
             }
+
+            .section {
+                width: 90%;
+            }
         }
     </style>
 </head>
